--- a/app/templates/components/category-column.hbs
+++ b/app/templates/components/category-column.hbs
@@ -1,1 +1,6 @@
 <div class="category"></div>
+<div class="answer"></div>
+<div class="answer"></div>
+<div class="answer"></div>
+<div class="answer"></div>
+<div class="answer"></div>
