return real categories and show displayTitle

--- a/app/templates/components/category-column.hbs
+++ b/app/templates/components/category-column.hbs
@@ -1,4 +1,4 @@
-<div class="category"></div>
+<div class="category">{{category.displayTitle}}</div>
 <div class="answer"></div>
 <div class="answer"></div>
 <div class="answer"></div>
