move answers onto category model

--- a/app/templates/components/category-column.hbs
+++ b/app/templates/components/category-column.hbs
@@ -1,6 +1,4 @@
 <div class="category">{{category.displayTitle}}</div>
-{{#each value in answerValues}}
-  {{#link-to 'game.answer' category.id value}}
-    <div class="answer">${{value}}</div>
-  {{/link-to}}
+{{#each value in category.answers}}
+  <div class="answer">${{value.value}}</div>
 {{/each}}
