--- a/app/templates/components/player-manager.hbs
+++ b/app/templates/components/player-manager.hbs
@@ -4,7 +4,8 @@
       {{player.name}}
     </span>
     <span class="score">
-      $0
+      ${{player.score}}
     </span>
+    <button class="assign" {{action "assign" player}}>+</button>
   </div>
 {{/each}}
