assign/deduct buttons only show up while answering

--- a/app/templates/components/player-manager.hbs
+++ b/app/templates/components/player-manager.hbs
@@ -6,7 +6,9 @@
     <span class="score">
       {{score-display player.score}}
     </span>
-    <button class="assign" {{action "assign" player}}>+</button>
-    <button class="deduct" {{action "deduct" player}}>-</button>
+    {{#if player.active}}
+      <button class="assign" {{action "assign" player}}>+</button>
+      <button class="deduct" {{action "deduct" player}}>-</button>
+    {{/if}}
   </div>
 {{/each}}
