--- a/app/templates/game/answer.hbs
+++ b/app/templates/game/answer.hbs
@@ -1,4 +1,4 @@
 <div class="answer-revealed">
   {{model.displayQuestion}}
 </div>
-<button class="pass" {{action 'pass'}}>Pass</button>
+<button class="pass" {{action 'endRound'}}>Pass</button>
