just plop the answer in the template for now

--- a/app/templates/game/answer.hbs
+++ b/app/templates/game/answer.hbs
@@ -1,4 +1,5 @@
 <div class="answer-revealed">
   {{model.displayQuestion}}
 </div>
+({{model.answer}})
 <button class="pass" {{action 'endRound'}}>Pass</button>
