--- a/app/templates/game.hbs
+++ b/app/templates/game.hbs
@@ -1,2 +1,6 @@
-{{outlet}}
+<div class="board">
+  {{outlet}}
+</div>
+<div class="clearfix"></div>
+<br />
 {{player-manager service=players endRound="endRound"}}
