--- a/app/templates/game/answer.hbs
+++ b/app/templates/game/answer.hbs
@@ -1,5 +1,5 @@
 <div class="answer-revealed">
   {{model.displayQuestion}}
 </div>
-({{model.answer}})
+<div class="answer-hide">({{model.answer}})</div>
 <button class="pass" {{action 'endRound'}}>Pass</button>
