--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,6 +3,7 @@
   height: 600px;
 
   background-color: blue;
+  text-align: center;
 }
 
 .category-column {
@@ -16,8 +17,6 @@
   width: 98px;
   height: 98px;
     /* ew */
-
-  text-align: center;
 }
 
 .category {
@@ -39,12 +38,25 @@
 }
 
 .player {
-  width: 200px;
-  height: 50px;
+  border: 1px solid black;
+  width: 198px;
+  height: 75px;
   float: left;
   text-align: center;
   background-color: blue;
   color: white;
+}
+
+.assign {
+  background-color: green;
+}
+
+.deduct {
+  background-color: red;
+}
+
+.pass {
+  background-color: yellow;
 }
 
 .answer-revealed {
