--- a/app/templates/components/player-manager.hbs
+++ b/app/templates/components/player-manager.hbs
@@ -1,4 +1,4 @@
-{{#each player in service.players}}
+{{#each players as |player|}}
   <div class="player">
     <div class="score">
       {{score-display player.score}}
