--- a/app/templates/game.hbs
+++ b/app/templates/game.hbs
@@ -3,7 +3,7 @@
 </div>
 <div class="clearfix"></div>
 <br />
-<div>visit {{link-to hostUrl}} to see answers...or is it questions? this game is weird...</div>
-<div class="clearfix"></div>
-<br />
 {{player-manager service=players endRound="endRound"}}
+<br />
+<div class="clearfix"></div>
+<div>visit <a href={{hostUrl}}>{{hostUrl}}</a> to see answers...or is it questions? this game is weird...</div>
