testing onmessage action of host controller

--- a/app/templates/host.hbs
+++ b/app/templates/host.hbs
@@ -1,5 +1,5 @@
-{{currentClue.q}}
+<span class="question">{{currentClue.q}}</span>
 <br />
 ...
 <br />
-{{currentClue.a}}
+<span class="answer">{{currentClue.a}}</span>
