--- a/app/templates/host.hbs
+++ b/app/templates/host.hbs
@@ -3,3 +3,17 @@
 ...
 <br />
 <span class="answer">{{currentClue.a}}</span>
+<br />
+{{#if active}}
+<button class="pass" {{action "pass"}}></button>
+{{/if}}
+{{#each players as |player|}}
+  <div class="player">
+    {{player.name}}
+
+    {{#if player.active}}
+      <button class="deduct" {{action "deduct" player}}>-</button>
+      <button class="assign" {{action "assign" player}}>+</button>
+    {{/if}}
+  </div>
+{{/each}}
