--- a/app/templates/game.hbs
+++ b/app/templates/game.hbs
@@ -6,4 +6,4 @@
 {{player-manager service=players endRound="endRound"}}
 <br />
 <div class="clearfix"></div>
-<div>visit <a href={{hostUrl}}>{{hostUrl}}</a> to see answers...or is it questions? this game is weird...</div>
+<div>visit <a href='/host'>/host</a> to see answers...or is it questions? this game is weird...</div>
